deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-todo-deployment
  labels:
    app: django-app
  namespace: django-todo-app 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:      
      containers:
      - name: django-container
        image: ghadgeparitosh10/django-app:latest
        ports:
        - containerPort: 8001
