service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-todo-service
  namespace: django-todo-app
spec:
  selector:
    app: django-app
  type: NodePort
  ports:
  - protocol: TCP
    port: 8001          # Port exposed by the service
    targetPort: 8001    # Port inside the pod (from containerPort)
