ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host-paritosh-django
  namespace: django-todo-app
spec:
  ingressClassName: nginx
  rules:
    - host: paritosh.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-todo-service
                port:
                  number: 8001
